--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <!-- jquery -->
   <script src="libjs/jquery-2.1.4/jquery-2.1.4.min.js"></script>
   <!-- jsonix -->
-  <script src="libjs/jsonix/Jsonix-all.js"></script>
+  <script src="libjs/jsonix/Jsonix-min.js"></script>
   <!-- bootstrap -->
   <script src="libjs/bootstrap-3.3.6/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="libjs/bootstrap-3.3.6/css/bootstrap.min.css">
