--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Browser and editor for Component Metadata profiles and components. Central registry for the Component Metadata Infrastructure (CMDI) of CLARIN. More information about CMDI can be found at https://www.clarin.eu/cmdi">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <!-- jquery -->
-  <script src="libjs/jquery-2.1.4/jquery-2.1.4.min.js"></script>
+  <script src="libjs/jquery/jquery-2.2.4.min.js"></script>
   <!-- jsonix -->
   <script src="libjs/jsonix/Jsonix-min.js"></script>
   <!-- bootstrap -->
