--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <script src="libjs/bootstrap-3.3.6/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="libjs/bootstrap-3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="libjs/bootstrap-3.3.6/css/bootstrap-theme.min.css">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
   <!--[if lt IE 9]>
     <script>
       (function(){
