upgraded clarin basestyle to 0.4.0 stable

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
   <!-- jsonix -->
   <script src="libjs/jsonix/Jsonix-min.js"></script>
   <!-- bootstrap -->
-  <script src="libjs/bootstrap-clarin-0.4.0-alpha1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="libjs/bootstrap-clarin-0.4.0-alpha1/css/bootstrap.min.css">
+  <script src="libjs/bootstrap-clarin-0.4.0/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="libjs/bootstrap-clarin-0.4.0/css/bootstrap.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
   <!--[if lt IE 9]>
     <script>
